feat: add more tests for mail and user microservices